# agent-flow-new

./: .env.example  .gitignore  compose.yml
.claude/skills/: README.md
.claude/skills/agent/: SKILL.md
.claude/skills/agent-skill/: SKILL.md
.claude/skills/asset/: SKILL.md
.claude/skills/asset-version/: SKILL.md
.claude/skills/code-diff/: SKILL.md
.claude/skills/command-palette-item/: SKILL.md
.claude/skills/connector/: SKILL.md
.claude/skills/context-source/: SKILL.md
.claude/skills/dashboard-summary/: SKILL.md
.claude/skills/escalation-request/: SKILL.md
.claude/skills/insight-metric/: SKILL.md
.claude/skills/project/: SKILL.md
.claude/skills/prompt-layer/: SKILL.md
.claude/skills/review-decision/: SKILL.md
.claude/skills/role/: SKILL.md
.claude/skills/run/: SKILL.md
.claude/skills/scene/: SKILL.md
.claude/skills/step/: SKILL.md
.claude/skills/test-result/: SKILL.md
backend/: Cargo.toml  Dockerfile
backend/src/: config.rs  main.rs
frontend/: package.json
frontend/app/: globals.css  layout.js
frontend/components/: afh-creative.jsx  afh-dashboard.jsx  afh-pages.jsx  afh-runs.jsx  afh-ui.jsx  app-shell.jsx  i18n.jsx  step-timeline.jsx
frontend/docs/: API-SPEC.zh-TW.md  FEATURES-AND-API.zh-TW.md  FEATURES.zh-TW.md  MVP-CODE-PLAN.zh-TW.md
frontend/lib/: afh-data.js
source/: Agent Flow Harness.html  afh-creative.jsx  afh-dashboard.jsx  afh-data.jsx  afh-main.jsx  afh-pages.jsx  afh-runs.jsx  afh-ui.jsx
source/uploads/: agent-flow-harness-design-brief-v2.md  agent-flow-harness-design-brief-v3.md
(+1 files in other folders)
